--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'q.rorbin:badgeview:1.0.6'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
     compile 'org.greenrobot:greendao:3.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
 }
 
