1.成功发送正确格式的消息给服务器

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,11 @@
             android:parentActivityName=".Activitys.MainActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".Activitys.LoadingActicity"></activity>
+
+        <service
+            android:name=".Utils.SendMsgService">
+        </service>
+        <service android:name=".Utils.MyService"/>
     </application>
 
 </manifest>
